--- a/package.json
+++ b/package.json
@@ -91,5 +91,10 @@
   },
   "engines": {
     "node": "16.x.x"
+  },
+  "volta": {
+    "node": "16.18.0",
+    "npm": "8.19.3",
+    "yarn": "3.1.1"
   }
 }
