--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -8,7 +8,7 @@ on:
     branches: [ "main" ]
 
 env:
-  FLY_API_TOKEN: ${{ fly_env.FLY_API_TOKEN }}
+  FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
   
 jobs:
   build:
